; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-font.c_contour_point_func1.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-font.c_contour_point_func1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i32, i32*, i32*, i8*)* @contour_point_func1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @contour_point_func1(i32* %0, i8* %1, i32 %2, i32 %3, i32* %4, i32* %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i8*, align 8
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32* %5, i32** %14, align 8
  store i8* %6, i8** %15, align 8
  %16 = load i32, i32* %11, align 4
  %17 = icmp eq i32 %16, 1
  br i1 %17, label %18, label %22

18:                                               ; preds = %7
  %19 = load i32*, i32** %13, align 8
  store i32 2, i32* %19, align 4
  %20 = load i32*, i32** %14, align 8
  store i32 3, i32* %20, align 4
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %8, align 4
  br label %31

22:                                               ; preds = %7
  %23 = load i32, i32* %11, align 4
  %24 = icmp eq i32 %23, 2
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load i32*, i32** %13, align 8
  store i32 4, i32* %26, align 4
  %27 = load i32*, i32** %14, align 8
  store i32 5, i32* %27, align 4
  %28 = load i32, i32* @TRUE, align 4
  store i32 %28, i32* %8, align 4
  br label %31

29:                                               ; preds = %22
  %30 = load i32, i32* @FALSE, align 4
  store i32 %30, i32* %8, align 4
  br label %31

31:                                               ; preds = %29, %25, %18
  %32 = load i32, i32* %8, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
